# broccolini

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .pydocstyle.ini  .pylintrc  CHANGELOG.md  README.md  SECURITY.md  classes.dot  code_of_conduct.md  delete_me_sep_2020.json  generic_file_name_json.json  mypy.ini  packages.dot  pylama.ini  pyproject.toml  pyproject.toml~
.github/workflows/: ci_with_poetry.yml  codeql-analysis.yml  linter.yml
broccolini/: api_access.py  authentication_functions.py  database_operations.py  fileoperation_functions.py  json_functions.py  notifications.py
docs/: index.html  requirements.txt
tests/: alternate_README.md  conftest.py  test_api_access.py  test_authentication.py  test_broccolini.py  test_database_operations.py  test_file_operations.py  test_json_functions.py  test_notifications.py
tests/fake_data_from_conftest/: list_of_databases_in_fauna_9_20_2020.txt
tests/integration_tests/: integration_1.py  test_files_to_fauna_integration.py
