[tool.poetry]
name = "broccolini"
version = "0.1.0"
description = "broccolini utility functions"
authors = ["gregorywendel <greg.wendel@hey.com>"]
license = "MIT"
homepage = "https://github.com/clearabundantfutbol/ipv6_python_utilities"
repository = "https://github.com/clearabundantfutbol/ipv6_python_utilities"
keywords = ["utilities"]
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
include = [
    "LICENSE",
]

readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
twilio = "^6.45.1"
hvac = "^0.10.5"
faunadb = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.7.1"
pylama = "^7.7.1"
pytest-dependency = "^0.5.1"
coverage = "^5.2"
pylint = "^2.5.3"
black = { version = "*", allow-prereleases = true }
bandit = "^1.6.2"
mypy = "^0.782"
pydocstyle = "^5.0.2"
pytest-cov = "^2.10.0"
faker = "^4.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

