[tool.poetry]
name = "broccolini"
version = "0.1.1"
description = "broccolini utility functions"
authors = ["Gregory Wendel <greg.wendel@hey.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pythonrising/broccolini/"
repository = "https://github.com/pythonrising/broccolini/"
keywords = ["utilities"]
include = ["LICENSE"]
classifiers=[
   "Environment :: Console",
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License ",
   "Operating System :: OS Independent",
   "Environment :: Console",
   "Intended Audience :: Developers",
   "Natural Language :: English",
   "Topic :: Software Development :: Libraries :: Python Modules",
   "Topic :: Software Development :: Documentation",
   "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.8"
twilio = "^6.45.1"
hvac = "^0.10.5"
faunadb = "^3.0.0"
shortuuid = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pre-commit = "^2.7.1"
pylama = "^7.7.1"
pytest-dependency = "^0.5.1"
coverage = "^5.2"
pylint = "^2.5.3"
black = { version = "*", allow-prereleases = true }
bandit = "^1.6.2"
mypy = "^0.782"
pydocstyle = "^5.0.2"
pytest-cov = "^2.10.0"
faker = "^4.1.2"
sphinx = "^3.2.1"
psutil = "^5.7.2"

[tool.black]
line-length = 132
target-version = ['py38']
exclude = '''
/(
    \.git
  | __pycache__
  | \.pytest_cache
  | \.tox
  | \.vscode
  | build
  | dist
  | docs
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
